translation-tool/inputs/source_meta/objects/HSvc_DETSField__c.object
<CustomObject>
    <description>Contains list of DETS fields. Maps to PS_HNS_DETS_FIELDS.</description>
    <fields>
        <fullName>DETSFIELDSID__c</fullName>
        <description>Uniquely identifies a DETS field. Maps to PS_HNS_DETS_FIELDS.DETSFIELDSID</description>
        <externalId>true</externalId>
        <label>DETS Field ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DETSCUSTOMLABEL__c</fullName>
        <label>DETSCUSTOMLABEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DETSDEPARTMENT__c</fullName>
        <label>DETS Department</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DETSGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DETS Group</label>
        <referenceTo>HSvc_DETSRelationGroup__c</referenceTo>
        <relationshipName>DETS_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_DETSMANDATORY__c</fullName>
        <label>DETSMANDATORY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DETS Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>HSvc_DETSCUSTOMLABEL__c</columns>
        <columns>HSvc_DETSDEPARTMENT__c</columns>
        <columns>DETSFIELDSID__c</columns>
        <columns>HSvc_DETSGroup__c</columns>
        <columns>HSvc_DETSMANDATORY__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DETS Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DETS Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>